Resuelvo un ej, marco cuales son obligatorios
TODO: Mejorar el código del ej resuelto ocurrencias123Repetidos, fue resuelto sin mucho pienso

--- a/solution/aFramework.vcxproj
+++ b/solution/aFramework.vcxproj
@@ -118,6 +118,13 @@
     <ClInclude Include="PruebasListas.h" />
     <ClInclude Include="PruebasPropias.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasArboles.txt" />
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasComienzo.txt" />
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasDefensa.txt" />
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasListas.txt" />
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasPropias.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
