--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ solution-2/.vs
 parcial-2/Debug
 parcial-2/.vs
 parcial-2/aFramework.vcxproj.filters
+parcial-2/aFramework.vcxproj.filters
+parcial-2/aFramework.vcxproj
