--- a/parcial-2/aFramework.vcxproj.filters
+++ b/parcial-2/aFramework.vcxproj.filters
@@ -397,6 +397,18 @@
     <Text Include="Defensa.txt">
       <Filter>Ejercicios</Filter>
     </Text>
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasCorreccionResultado.txt">
+      <Filter>Soluciones</Filter>
+    </Text>
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasDefensaResultado.txt">
+      <Filter>Soluciones</Filter>
+    </Text>
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasEjemploDeUsoEntregaResultado.txt">
+      <Filter>Soluciones</Filter>
+    </Text>
+    <Text Include="SalidaDeLasPruebas\Resultados\PruebasPropiasResultado.txt">
+      <Filter>Soluciones</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <None Include="version.txt">
